# technopark_algorithms-data_structures

./: README.md
it_1/: CMakeLists.txt
it_2/: CMakeLists.txt
it_4/source/: main.cpp
module_1/it_1/: compile_commands.json
module_1/it_1/source/: main.cpp
module_1/it_2/: compile_commands.json  gendata.py
module_1/it_2/source/: main.cpp
module_1/it_4/: CMakeLists.txt  compile_commands.json
module_1/it_4/source/: main.cpp
module_2/it_1/: CMakeLists.txt  compile_commands.json
module_2/it_1/source/: best_vers.cpp  main.cpp  old.cpp
module_2/it_2/: CMakeLists.txt
module_2/it_2/source/: foo.cpp  main.cpp
module_2/it_3/: CMakeLists.txt
module_2/it_3/source/: main.cpp
module_3/it_1/: CMakeLists.txt  compile_commands.json
module_3/it_1/include/: arc_graph.hpp  i_graph.hpp  list_graph.hpp  matrix_graph.hpp  set_graph.hpp
module_3/it_1/source/: arc_graph.cpp  list_graph.cpp  main.cpp  matrix_graph.cpp  set_graph.cpp
module_3/it_2/: CMakeLists.txt
module_3/it_2/source/: main.cpp
module_3/it_3/: CMakeLists.txt
module_3/it_3/source/: 1.cpp  it_3.cpp  main.cpp  orig.cpp
